# rust-boilerplate

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml
apps/api-server/: Cargo.toml
apps/api-server/src/: main.rs  states.rs
apps/api-server/src/config/: definition.rs  implements.rs  mod.rs
apps/api-server/src/middlewares/: metrics.rs  mod.rs  request_id.rs  tracing.rs
apps/api-server/src/routes/: health.rs  mod.rs  users.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
apps/worker/src/config/: definition.rs  implements.rs
crates/adapters/: Cargo.toml
crates/adapters/src/database/: audit.rs  mod.rs
crates/adapters/src/database/postgres/: user_repo.rs
crates/adapters/src/messaging/: mod.rs  nats_publisher.rs
crates/adapters/src/persistence/: mod.rs
crates/adapters/src/persistence/entities/: user.rs
crates/adapters/src/persistence/postgres/: mod.rs  repo.rs  user_repo.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/domain/entities/: user.rs
crates/core/src/domain/ports/: messaging.rs  user_repo.rs
crates/core/src/services/: user_service.rs
deployment/loki/: loki.yaml
deployment/prometheus/: prometheus.yml
deployment/tempo/: tempo.yaml
deployment/vector/: vector.yml
libs/common/: Cargo.toml
libs/common/src/: id.rs
libs/configuration/: Cargo.toml
libs/configuration/src/: definition.rs  implements.rs  lib.rs  loader.rs
libs/configuration/src/config/: db.rs  log.rs  mod.rs  nats.rs  otel.rs
libs/db/: Cargo.toml
libs/db/src/orm/: audit.rs  context.rs  dto.rs  init.rs  mod.rs  repo.rs
libs/messaging/: Cargo.toml
libs/messaging/src/: error.rs  lib.rs  message.rs  traits.rs
libs/messaging/src/nats/: client.rs  factory.rs  headers.rs  middleware.rs  mod.rs
libs/telemetry/: Cargo.toml
libs/telemetry/src/: lib.rs  tracer.rs
libs/telemetry/src/meter/: http.rs  mod.rs  system.rs
