
[workspace]
resolver = "2"
members = ["apps/*", "libs/*", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Giang Le <giangle2198@gmail.com>"]

[workspace.dependencies]
# Internal Crates
ro-adapters = { path = "./crates/adapters" }
ro-common = { path = "./libs/common" }
ro-config = { path = "./libs/configuration" }
ro-core = { path = "./crates/core" }
ro-db = { path = "./libs/db" }
ro-telemetry = { path = "./libs/telemetry" }
ro-messaging = { path = "./libs/messaging" }

# Web framework`
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
once_cell = "1.19"
async-trait = "0.1.89"
regex = "1"
async-nats = "0.46"
futures-util = "0.3.31"

# Serialization
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"                                # Binary serialization (faster than JSON)
serde_yaml = "0.9"

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Logging & Tracing
tracing = "0.1"
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.31", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = [
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-http = { version = "0.31" }
opentelemetry-stdout = { version = "0.31", features = ["trace", "logs"] }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry-appender-tracing = { version = "0.31.1", default-features = false }
opentelemetry-otlp = { version = "0.31", features = [
    "trace",
    "metrics",
    "logs",
    "internal-logs",
    "grpc-tonic",
] }


# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.38.0"
rand = "0.9.2"
nanoid = "0.4.0"

#Database
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "mock",
] }
