[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
ro-common.workspace = true
ro-config.workspace = true
ro-telemetry.workspace = true
ro-core.workspace = true
ro-adapters.workspace = true

# External
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing-appender.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "mock",
] }
async-nats.workspace = true
