[package]
name = "worker"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal
ro-config.workspace = true
ro-core.workspace = true

# External
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-nats.workspace = true
serde_json.workspace = true
futures-util.workspace = true
