[package]
name = "ro-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Internal
ro-core.workspace = true
ro-config.workspace = true
ro-db.workspace = true
ro-messaging.workspace = true

# External
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "mock",
] }
async-nats.workspace = true
serde_json.workspace = true
chrono.workspace = true
validator.workspace = true
serde = { workspace = true, features = ["derive"] }
