[package]
name = "ro-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core should depend on as little as possible. 
# "ro-common" is allowed for generic utilities like IDs.
ro-common.workspace = true

# Serde is usually needed for entities, but strictly speaking, 
# pure domain objects sometimes avoid even this. 
# For pragmatism, we usually include it.
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
thiserror.workspace = true
async-nats.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "mock",
] }
