[package]
name = "ro-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Internal
ro-config.workspace = true
# External
anyhow.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "mock",
] }
validator.workspace = true
serde = { workspace = true, features = ["derive"] }
